--- a/package.json
+++ b/package.json
@@ -6,6 +6,14 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build"
   },
+  "vue":{
+    "pwa":{
+      "name": "App Gif Router",
+      "themeColor": "#444444",
+      "appleMobileWebAppCapable": "yes",
+      "appleMobileWebAppStatusBarStyle": "black-translucent"
+    }
+  },
   "dependencies": {
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
