--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
       "themeColor": "#444444",
       "appleMobileWebAppCapable": "yes",
       "appleMobileWebAppStatusBarStyle": "black-translucent",
-      "start_url": "./"
+      "start_url": "/*"
     }
   },
   "dependencies": {
