--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
   "vue":{
     "pwa":{
       "name": "App Gif Router",
-      "themeColor": "#444444",
+      "themeColor": "#000000",
       "appleMobileWebAppCapable": "yes",
-      "appleMobileWebAppStatusBarStyle": "black-translucent",
-      "start_url": "/*"
+      "appleMobileWebAppStatusBarStyle": "black-translucent"
     }
   },
   "dependencies": {
